--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+body {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
+}
+
+main {
+    font-size: 16px;
+    text-size-adjust: none;
+    -ms-text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+}
+
 .main-header {
     display: flex;
     justify-content: space-between;
