--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,27 @@ nav>a:hover {
     color: rgba(0, 0, 0, 1);
 }
 
+img {
+    object-fit: cover;
+}
+
 .blur {
     background: rgba(255, 255, 255, 0.88);
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
     filter: unset;
+}
+
+.drop-shadow {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.hover-effect:hover {
+    transform: scale(1.02);
+    transition: transform 0.3s ease;
+}
+
+.hover-effect:not(:hover) {
+    transform: scale(1);
+    transition: transform 0.3s ease;
 }
